﻿Version [Version Number] ([Friendly Version Number]) [Release Date]


Version 4.0.0 (v4.0 RTM)

	Improvements/Changes:
		-[Core] Marked deprecated integration extension methods with Obsolete(true) causing them to trigger
		 a compile error. This includes methods like RegisterPerWebRequest, RegisterWebApiRequest,
		 RegisterPerWcfOperation, GetCurrentWcfOperationScope, RegisterLifetimeScope, GetCurrentLifetimeScope
		 and GetCurrentExecutionContextScope. (fixes #304)
		-[Core] Removed all methods that were marked [obsolete(true)] since v3.0. (fixes #305)


Version 3.3.0 (v3.3.0 RTM)

	Improvements/Changes:
		-[Core] Marked ContainerOptions.ResolveUnregisteredCollections obsolete. (fixes #303)
		-[Core] Removed unneeded dependencies in .NETStandard NuGet release. (fixes #312)
		-[Core] Disabled Dynamic Assembly Compilation by default. (fixes #274)
		-[Core] Added ContainerOptions.DefaultLifestyle property to make it easier to override the default
		 (transient) lifestyle. (fixes #313)
		-[LifetimeScoping] Marked RegisterLifetimeScope and GetCurrentLifetimeScope obsolete. (fixes #303)
		-[WCF] Marked RegisterPerWcfOperation and GetCurrentWcfOperationScope obsolete. (fixes #303)
		-[Web] Marked RegisterPerWebRequest obsolete. (fixes #303)
		-[WebApi] Marked RegisterWebApiRequest obsolete. (fixes #303)


Version 3.2.7 (v3.2.7 RTM) 2016-11-03

	Bug fixes:
		-[Core] Fixes a bug introduced in 3.2.5 that cause a stackoverflow in the cyclic dependency 
		 mechanism (ohh the irony).


Version 3.2.5 (v3.2.5 RTM) 2016-11-01

	Bug fixes:
		-[Core] Concurrency bug when resolving a decorated instance (CyclicDependencyException is thrown) in
		 case multiple container instances where used. (fixes #323)


Version 3.2.4 (v3.2.4 RTM) 2016-10-26

	Bug fixes:
		-[Core] Misleading exception fixed that was thrown after the container got disposed. (fixes #322)


Version 3.2.3 (v3.2.3 RTM) 2016-10-16

	Bug fixes: