@@ -39,7 +39,7 @@ namespace SimpleInjector.Lifestyles
             this.falseLifestyle = falseLifestyle;
         }
 
-        protected override int Length
+        public override int Length
         {
             get { throw new NotSupportedException("The length property is not supported for this lifestyle."); }
         }
